# screenshare

./: .gitignore  CMakeLists.txt  LICENSE  READMD.md
assets/: main.css
src/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  actions.cpp  actions.h  info_buffer.cpp  info_buffer.h  info_text_buffer.cpp  info_text_buffer.h  video_player.cpp  video_player.h
src/misc/: CMakeLists.txt  bit_rate_measurement.cpp  bit_rate_measurement.h  concurrency.hpp  network.cpp  network.h  rate_sleeper.cpp  rate_sleeper.h  time_measurement.cpp  time_measurement.h
src/screengrabber/: CMakeLists.txt  common.h  x11.cpp  x11.h
src/screeninteractor/: CMakeLists.txt  common.h  x11.cpp  x11.h
src/server/: CMakeLists.txt  video_server.cpp  video_server.h
src/video/: CMakeLists.txt  common.cpp  common.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  network.cpp  network.h
